Make CMake 2.8 compatible
Signed-off-by: Dave Brown <d.brown@bigdavedev.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ set ( TEST_SOURCES test_distance.cpp )
 add_executable ( ${TARGET_NAME} ${SOURCES} ${TEST_SOURCES} )
 add_dependencies ( ${TARGET_NAME} googletest )
 
-target_include_directories ( ${TARGET_NAME} PUBLIC ${CMAKE_SOURCE_DIR} )
+include_directories ( ${CMAKE_SOURCE_DIR} )
 target_link_libraries ( ${TARGET_NAME} -pthread ${GTEST_LIBRARIES} )
 add_custom_target ( runtests COMMAND ./${TARGET_NAME} )
 add_test ( ${TARGET_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TARGET_NAME} )
