Fix coverage target
Signed-off-by: Dave Brown <d.brown@bigdavedev.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,8 @@ add_gtest ()
 
 coveralls_turn_on_coverage ()
 
-set ( SOURCES distance.h )
-
-coveralls_setup ( "${SOURCES}"
-                  ON
-                  "${CMAKE_SOURCE_DIR}/external/JoakimSoderberg/coveralls-cmake/cmake" )
 
 enable_testing ()
 
 add_subdirectory ( test )
+add_subdirectory ( coverage )
