Add doxygen make target
Signed-off-by: Dave Brown <d.brown@bigdavedev.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,28 @@
 cmake_minimum_required ( VERSION 2.8 )
 
+set ( PROJECT_NAME Units )
+
 set ( CMAKE_MODULE_PATH
       ${CMAKE_MODULE_PATH}
       ${PROJECT_SOURCE_DIR}/cmake
       ${PROJECT_SOURCE_DIR}/external/JoakimSoderberg/coveralls-cmake/cmake )
 
 add_definitions ( "-std=c++1z" )
+
+execute_process ( COMMAND git describe --always --tags
+                  OUTPUT_VARIABLE GIT_REPO_VERSION )
+
+message ( STATUS "version: " ${GIT_REPO_VERSION} )
+
+## Generate Doxygen
+find_package ( Doxygen )
+if ( DOXYGEN_FOUND )
+	configure_file ( doxygen/Doxyfile.in ${CMAKE_BINARY_DIR}/Doxyfile @ONLY )
+	add_custom_target ( doc 
+		${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/Doxyfile
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/doc
+						COMMENT "Generating Doxygen files..." VERBATIM )
+endif ()
 
 file(REMOVE_RECURSE ${PROJECT_BINARY_DIR}/*.gcda)
 
