--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,17 @@
 project ( distance_ut )
-add_definitions ( "-std=c++14" )
+if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	add_definitions ( "-std=c++1z" )
+endif()
 
 set ( TARGET_NAME ${PROJECT_NAME} )
 
-set ( TEST_SOURCES test_distance.cpp )
+set ( TEST_SOURCES test_distance.cpp ../units.h )
+
 add_executable ( ${TARGET_NAME} ${SOURCES} ${TEST_SOURCES} )
 add_dependencies ( ${TARGET_NAME} googletest )
 
-include_directories ( ${CMAKE_SOURCE_DIR} )
-target_link_libraries ( ${TARGET_NAME} -pthread ${GTEST_LIBRARIES} )
+include_directories ( ${CMAKE_SOURCE_DIR}
+					  ${CMAKE_BINARY_DIR}/googletest-src/googletest/include )
+target_link_libraries ( ${TARGET_NAME} -pthread gtest_main )
 add_custom_target ( runtests COMMAND ./${TARGET_NAME} )
 add_test ( ${TARGET_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TARGET_NAME} )
