--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,51 @@
-project ( distance_ut )
+project (distance_ut)
+
 if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-	add_definitions ( "-std=c++1z" )
+	add_definitions ("-std=c++1z")
 endif()
 
-set ( TARGET_NAME ${PROJECT_NAME} )
+set (TARGET_NAME ${PROJECT_NAME})
 
-set ( TEST_SOURCES test_distance.cpp ../units.h )
+set (TEST_SOURCES
+	test_distance.cpp
+)
 
-add_executable ( ${TARGET_NAME} ${SOURCES} ${TEST_SOURCES} )
-add_dependencies ( ${TARGET_NAME} googletest )
+if (WIN32)
+	# Prevent overriding the parent project's compiler/linker
+	# settings on Windows
+	set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+endif ()
 
-include_directories ( ${CMAKE_SOURCE_DIR}
-					  ${CMAKE_BINARY_DIR}/googletest-src/googletest/include )
-target_link_libraries ( ${TARGET_NAME} -pthread gtest_main )
-add_custom_target ( runtests COMMAND ./${TARGET_NAME} )
-add_test ( ${TARGET_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TARGET_NAME} )
+add_executable (${TARGET_NAME} ${TEST_SOURCES})
+add_dependencies ( ${TARGET_NAME} gtest_main )
+
+target_include_directories (${TARGET_NAME}
+	PRIVATE
+	${CMAKE_SOURCE_DIR}
+
+	SYSTEM
+	gtest
+)
+
+target_link_libraries (${TARGET_NAME}
+	PRIVATE
+	-pthread
+	gtest_main
+)
+
+add_test (${TARGET_NAME}
+	${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TARGET_NAME}
+)
+
+if (UNITS_ENABLE_COVERAGE)
+	set (CMAKE_MODULE_PATH
+		${CMAKE_MODULE_PATH}
+		${CMAKE_SOURCE_DIR}/external/JoakimSoderberg/coveralls-cmake/cmake
+	)
+	include (Coveralls)
+	coveralls_turn_on_coverage ()
+	coveralls_setup (units.h
+		${UNITS_ENABLE_COVERAGE_UPLOAD}
+		"${CMAKE_SOURCE_DIR}/external/JoakimSoderberg/coveralls-cmake/cmake"
+	)
+endif()
