Update Travis configuration
Signed-off-by: Dave Brown <d.brown@bigdavedev.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,5 +79,8 @@ before_script:
 script:
   - export COVERALLS_SERVICE_NAME=travis-ci
   - export COVERALLS_REPO_TOKEN=xfGcbl2zMpSZ0KsOSSKcJ11XtDfTQKNQK
-  - cmake -DCMAKE_BUILD_TYPE=Debug .. && make && make runtests && make coveralls
+  - cmake -DCMAKE_BUILD_TYPE=Debug -DUNITS_BUILD_TESTS=ON -DUNITS_BUILD_DOCUMENTATION=OFF -DUNITS_ENABLE_COVERAGE=ON -DUNITS_ENABLE_COVERAGE_UPLOAD=ON ..
+  - make
+  - ctest
+  - make coveralls
 
