Revert "Add MinGW to AppVeyor"
This reverts commit 56ad15617e6a841f326d6346682ff5d425f1d099.

Signed-off-by: David Brown <d.brown@bigdavedev.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,7 @@ environment:
   matrix:
     - GENERATOR: Visual Studio 14 2015 Win64
     - GENERATOR: Visual Studio 14 2015
-    - GENERATOR: MinGW Makefiles
+  #  - GENERATOR: MinGW Makefiles
 
 before_build:
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
