--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ macro (units_add_test TEST_NAME SOURCE_FILE)
 	)
 endmacro ()
 
+units_add_test (test_units test_units.cpp)
 units_add_test (test_distance test_distance.cpp)
 units_add_test (test_streams test_streams.cpp)
 
