Start implementing mass units
Signed-off-by: David Brown <d.brown@bigdavedev.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,4 +36,5 @@ endmacro ()
 units_add_test (test_units test_units.cpp)
 units_add_test (test_distance test_distance.cpp)
 units_add_test (test_streams test_streams.cpp)
+units_add_test (test_mass test_mass.cpp)
 
